--- a/environment.yml
+++ b/environment.yml
@@ -98,6 +98,8 @@ dependencies:
   - nccl=2.21.5.1=ha515578_0
   - ncurses=6.4=h6a678d5_0
   - networkx=3.4.2=py312h06a4308_0
+  - numpy=1.26.4=py312hc5e2394_0
+  - numpy-base=1.26.4=py312h0da6c21_0
   - openjpeg=2.5.2=h0d4d230_1
   - openldap=2.6.4=h42fbc30_0
   - openssl=3.0.16=h5eee18b_0
@@ -140,13 +142,14 @@ dependencies:
   - tensorflow=2.17.0=cuda124py312ha1f05a4_200
   - tensorflow-base=2.17.0=cuda124py312hfc7ff22_200
   - tensorflow-estimator=2.17.0=cuda124py312he5efd2c_200
+  - tensorflow-gpu=2.17.0=cuda124py312hd65659d_200
   - termcolor=2.1.0=py312h06a4308_0
   - tifffile=2025.2.18=py312h06a4308_0
   - tk=8.6.14=h993c535_1
   - tornado=6.5.1=py312h5eee18b_0
-  - tqdm=4.67.1=py312he106c6f_0
   - typing-extensions=4.12.2=py312h06a4308_0
   - typing_extensions=4.12.2=py312h06a4308_0
+  - tzdata=2025b=h04d1e81_0
   - unicodedata2=15.1.0=py312h5eee18b_1
   - urllib3=2.3.0=py312h06a4308_0
   - werkzeug=3.1.3=py312h06a4308_0
@@ -165,45 +168,22 @@ dependencies:
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.6=hc292b87_0
   - pip:
-      - altair==5.5.0
       - attrs==25.3.0
-      - autopep8==2.3.2
-      - click==8.2.1
-      - cloudpickle==3.1.1
-      - dask==2025.5.1
-      - dask-jobqueue==0.9.0
-      - distributed==2025.5.1
-      - flake8==7.2.0
-      - fsspec==2025.5.1
-      - jinja2==3.1.6
-      - joblib==1.5.1
+      - coloredlogs==15.0.1
+      - humanfriendly==10.0
       - jsonschema==4.24.0
       - jsonschema-specifications==2025.4.1
-      - locket==1.0.0
-      - mccabe==0.7.0
-      - msgpack==1.1.0
-      - narwhals==1.42.0
-      - numpy==2.3.0
-      - opencv-python==4.11.0.86
-      - pandas==2.3.0
-      - partd==1.4.2
-      - patsy==1.0.1
-      - plantcv==4.7
-      - psutil==7.0.0
-      - pycodestyle==2.13.0
-      - pyflakes==3.3.2
-      - pytz==2025.2
-      - pyyaml==6.0.2
+      - llvmlite==0.44.0
+      - mpmath==1.3.0
+      - numba==0.61.2
+      - onnxruntime==1.22.0
+      - opencv-python-headless==4.11.0.86
+      - platformdirs==4.3.8
+      - pooch==1.8.2
+      - pymatting==1.1.14
       - referencing==0.36.2
+      - rembg==2.0.66
       - rpds-py==0.25.1
-      - scikit-learn==1.7.0
-      - sortedcontainers==2.4.0
-      - statsmodels==0.14.4
-      - tblib==3.1.0
-      - threadpoolctl==3.6.0
-      - toolz==1.0.0
-      - tzdata==2025.2
-      - vl-convert-python==1.8.0
-      - xarray==2025.4.0
-      - zict==3.0.0
-prefix: /home/antoine/miniconda3/envs/leaf
+      - sympy==1.14.0
+      - tqdm==4.67.1
+prefix: /home/ale-tell/goinfre/conda_envs/leaf
